Fix padding on smaller screens

--- a/sass/layout/_hero-single.scss
+++ b/sass/layout/_hero-single.scss
@@ -49,7 +49,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $article-max-width;
-    padding-bottom: 12rem;
+    padding-bottom: 10vh;
     padding-left: $padding-general-content-box;
     padding-right: $padding-general-content-box;
     width: 100%;
